--- a/index.html
+++ b/index.html
@@ -23,198 +23,33 @@
   </div>
 
   <div class="panel-grid">
-    <!-- Social Media Panel -->
     <div id="socialMediaPanel" class="panel">
       <div class="panel-header">Social Media</div>
       <div class="panel-content"></div>
     </div>
 
-    <!-- News Media Panel -->
     <div id="newsPanel" class="panel">
       <div class="panel-header">News</div>
       <div class="panel-content"></div>
     </div>
 
-    <!-- Sports Panel -->
     <div id="sportsPanel" class="panel">
       <div class="panel-header">Sports</div>
       <div class="panel-content"></div>
     </div>
 
-    <!-- Investing Panel -->
     <div id="investingPanel" class="panel">
       <div class="panel-header">Investing</div>
       <div class="panel-content"></div>
     </div>
 
-    <!-- Research Panel -->
     <div id="researchPanel" class="panel">
       <div class="panel-header">Research</div>
       <div class="panel-content"></div>
     </div>
   </div>
 
-  <script>
-    // Function to initiate search for social media, news, sports, and stock data
-async function search() {
-  const query = document.getElementById('searchQuery').value;
-  try {
-    // Fetch data for all panels
-    await fetchSocialMediaData(query);
-    await fetchNewsData(query);
-    await fetchSportsData(query);
-    await fetchStockData(query);
-    await fetchResearchData(query);
-  } catch (error) {
-    console.error('Error during search:', error);
-  }
-}
-
-// Fetch Twitter data (Social Media)
-const fetchTwitterData = async (query) => {
-  const url = `https://api.twitter.com/2/tweets/search/recent?query=${query}&max_results=5`;
-  try {
-    const response = await fetch(url, {
-      headers: {
-        Authorization: `Bearer CSpKecPCNtO2WNbbi994ikW4g`
-      }
-    });
-    if (!response.ok) throw new Error('Failed to fetch Twitter data');
-    const data = await response.json();
-    displaySocialMediaResults(data.data);
-  } catch (error) {
-    console.error('Error fetching Twitter data:', error);
-  }
-};
-
-// Fetch Reddit data (Social Media)
-const fetchRedditData = async (query) => {
-  const url = `https://www.reddit.com/r/all/search.json?q=${query}&sort=relevance&t=all`;
-  try {
-    const response = await fetch(url);
-    if (!response.ok) throw new Error('Failed to fetch Reddit data');
-    const data = await response.json();
-    displaySocialMediaResults(data.data.children);
-  } catch (error) {
-    console.error('Error fetching Reddit data:', error);
-  }
-};
-
-// Fetch News data
-const fetchNewsData = async (query) => {
-  const apiKey = 'YOUR_NEWS_API_KEY';  // Your News API key goes here
-  const url = `https://newsapi.org/v2/everything?q=${query}&apiKey=${apiKey}`;
-  try {
-    const response = await fetch(url);
-    if (!response.ok) throw new Error('Failed to fetch News data');
-    const data = await response.json();
-    displayNewsResults(data.articles);
-  } catch (error) {
-    console.error('Error fetching News data:', error);
-  }
-};
-
-// Fetch stock data (Investing)
-const fetchStockData = async (query) => {
-  const apiKey = 'OX3H8PKIZFQ6OON3';  // Your AlphaVantage API key goes here
-  const url = `https://www.alphavantage.co/query?function=TIME_SERIES_DAILY&symbol=${query}&apikey=${apiKey}`;
-  try {
-    const response = await fetch(url);
-    if (!response.ok) throw new Error('Failed to fetch Stock data');
-    const data = await response.json();
-    displayStockResults(data['Time Series (Daily)']);
-  } catch (error) {
-    console.error('Error fetching Stock data:', error);
-  }
-};
-
-// Fetch sports data
-const fetchSportsData = async (query) => {
-  const apiKey = 'YOUR_SPORTS_RADAR_API_KEY';  // Your SportsRadar API key goes here
-  const url = `https://api.sportsradar.com/sports/baseball/MLB/games?apikey=${apiKey}`;
-  try {
-    const response = await fetch(url);
-    if (!response.ok) throw new Error('Failed to fetch Sports data');
-    const data = await response.json();
-    displaySportsResults(data.games);
-  } catch (error) {
-    console.error('Error fetching Sports data:', error);
-  }
-};
-
-// Fetch research articles
-const fetchResearchData = async (query) => {
-  const url = `https://eutils.ncbi.nlm.nih.gov/entrez/eutils/esearch.fcgi?db=pubmed&term=${query}&retmax=10&usehistory=y&api_key=AIzaSyCMM4zkl_aW-pKsU3-gaeklQL7UiM6czDk`;  // PubMed API key integrated here
-  try {
-    const response = await fetch(url);
-    if (!response.ok) throw new Error('Failed to fetch Research data');
-    const data = await response.text();
-    displayResearchResults(data);
-  } catch (error) {
-    console.error('Error fetching Research data:', error);
-  }
-};
-
-    // Display Twitter data
-    const displaySocialMediaResults = (data) => {
-      const socialMediaPanel = document.getElementById('socialMediaPanel').querySelector('.panel-content');
-      socialMediaPanel.innerHTML = data.map(item => `
-        <div class="result-item">
-          <a href="https://twitter.com/${item.username}" target="_blank">${item.text}</a>
-        </div>
-      `).join('');
-    };
-
-    // Display News data
-    const displayNewsResults = (articles) => {
-      const newsPanel = document.getElementById('newsPanel').querySelector('.panel-content');
-      newsPanel.innerHTML = articles.map(article => `
-        <div class="result-item">
-          <a href="${article.url}" target="_blank">${article.title}</a>
-        </div>
-      `).join('');
-    };
-
-    // Display Stock data
-    const displayStockResults = (data) => {
-      const investingPanel = document.getElementById('investingPanel').querySelector('.panel-content');
-      investingPanel.innerHTML = Object.keys(data).map(date => `
-        <div class="result-item">
-          <span>${date}</span>: ${data[date]['4. close']}
-        </div>
-      `).join('');
-    };
-
-    // Display Sports data
-    const displaySportsResults = (games) => {
-      const sportsPanel = document.getElementById('sportsPanel').querySelector('.panel-content');
-      sportsPanel.innerHTML = games.map(game => `
-        <div class="result-item">
-          <span>${game.date}: ${game.home_team} vs ${game.away_team}</span>
-        </div>
-      `).join('');
-    };
-
-    // Display Research data
-    const displayResearchResults = (data) => {
-      const researchPanel = document.getElementById('researchPanel').querySelector('.panel-content');
-      researchPanel.innerHTML = `<pre>${data}</pre>`;
-    };
-
-    // Set up live tickers
-    const fetchLiveTickerData = async () => {
-      const sportsTicker = document.getElementById('sports-ticker');
-      const stockTicker = document.getElementById('stock-ticker');
-
-      // Example: fetching live sports and stock data (You can extend this)
-      sportsTicker.innerText = 'NBA: Lakers vs Celtics - Live Score: 98-100';
-      stockTicker.innerText = 'AAPL: $145.60 (+0.5%)';
-    };
-
-    // Initialize the tickers
-    fetchLiveTickerData();
-    setInterval(fetchLiveTickerData, 60000);
-  </script>
+  <script src="scripts/search.js"></script>
 </body>
 
 </html>
