--- a/index.html
+++ b/index.html
@@ -27,29 +27,25 @@
       <div class="panel-header">Social Media</div>
       <div class="panel-content"></div>
     </div>
-
     <div id="newsPanel" class="panel">
       <div class="panel-header">News</div>
       <div class="panel-content"></div>
     </div>
-
     <div id="sportsPanel" class="panel">
       <div class="panel-header">Sports</div>
       <div class="panel-content"></div>
     </div>
-
     <div id="investingPanel" class="panel">
       <div class="panel-header">Investing</div>
       <div class="panel-content"></div>
     </div>
-
     <div id="researchPanel" class="panel">
       <div class="panel-header">Research</div>
       <div class="panel-content"></div>
     </div>
   </div>
 
-  <script src="scripts/search.js"></script>
+  <script src="search.js"></script>
 </body>
 
 </html>
